--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 -i https://pypi.org/simple
 alembic==1.9.2
 click==8.1.3
+dnspython==2.4.2; python_version >= '3.8' and python_version < '4.0'
+email-validator==2.0.0.post2
 flask==2.2.2
 flask-cors==3.0.10
 flask-login==0.6.2
@@ -9,7 +11,8 @@ flask-sqlalchemy==3.0.2
 flask-wtf==1.1.1
 greenlet==2.0.1
 gunicorn==20.1.0
-importlib-metadata==6.7.0; python_version < '3.10'
+idna==3.4; python_version >= '3.5'
+importlib-metadata==6.8.0; python_version < '3.10'
 itsdangerous==2.1.2
 jinja2==3.1.2
 mako==1.2.4
@@ -17,7 +20,7 @@ markupsafe==2.1.2
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-editor==1.0.4
-setuptools==68.1.2; python_version >= '3.8'
+setuptools==68.2.0; python_version >= '3.8'
 six==1.16.0
 sqlalchemy==1.4.46
 werkzeug==2.2.2
