--- a/Pipfile
+++ b/Pipfile
@@ -25,8 +25,16 @@ markupsafe = "==2.1.2"
 sqlalchemy = "==1.4.46"
 werkzeug = "==2.2.2"
 wtforms = "==3.0.1"
-email-validator = "*"
-boto3 = "*"
+email-validator = "==2.0.0.post2"
+boto3 = "==1.28.53"
+botocore = "==1.31.53"
+dnspython = "==2.4.2"
+idna = "==3.4"
+importlib-metadata = "==6.7.0"
+jmespath = "==1.0.1"
+s3transfer = "==0.6.2"
+urllib3 = "==1.26.16"
+zipp = "==3.17.0"
 
 [dev-packages]
 
