--- a/react-app/package.json
+++ b/react-app/package.json
@@ -6,15 +6,20 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.3.3",
     "http-proxy-middleware": "^1.0.5",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^17.0.2",
+    "react-icons": "^5.3.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-slick": "^0.30.2",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
